--- a/src/qt/forms/addressbookpage.ui
+++ b/src/qt/forms/addressbookpage.ui
@@ -6,12 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>760</width>
+    <width>993</width>
     <height>380</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Address Book</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">QWidget { background: transparent; }</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
