--- a/src/qt/forms/editaddressdialog.ui
+++ b/src/qt/forms/editaddressdialog.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Edit Address</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog { background: transparent; }</string>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QFormLayout" name="formLayout">
